<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hobo.datospersonales.MainActivity">

    <ScrollView
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNombre"
                android:layout_width="336dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"/>

            </android.support.design.widget.TextInputLayout>

            <DatePicker
                android:id="@+id/dpFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:datePickerMode="spinner"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/tilNombre"
                android:calendarViewShown="false"
                android:layout_marginTop="@dimen/items_margin_top"
                android:elevation="@dimen/calendario_elevacion">

                <TextView
                    android:paddingTop="@dimen/padding_title"
                    android:paddingBottom="@dimen/padding_title"
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textColor="@color/textoIconos"
                    android:textAlignment="center"
                    android:background="@color/colorPrimaryDark"/>

            </DatePicker>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dpFecha"
                android:layout_marginTop="@dimen/items_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilTelefono"
                android:layout_marginTop="@dimen/items_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilEmail"
                android:layout_marginTop="@dimen/items_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding"
                android:letterSpacing=".5"
                android:text="@string/texto_boton"
                android:layout_marginTop="@dimen/items_margin_top"
                android:layout_below="@+id/tilDesc"
                android:theme="@style/MyButtonRaised"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
